--- a/src/Resources/NIBs/MapViewController.xib
+++ b/src/Resources/NIBs/MapViewController.xib
@@ -483,6 +483,22 @@
 					</object>
 					<int key="connectionID">94</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">alertMain</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="490410700"/>
+					</object>
+					<int key="connectionID">95</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">alertMessage</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="571655797"/>
+					</object>
+					<int key="connectionID">96</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -691,7 +707,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">94</int>
+			<int key="maxID">96</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -721,6 +737,8 @@
 							<string>_navItem</string>
 							<string>addressSearchBar</string>
 							<string>addressSearchBarTextField</string>
+							<string>alertMain</string>
+							<string>alertMessage</string>
 							<string>connectionView</string>
 							<string>loadingLocationsView</string>
 							<string>locatingLabel</string>
@@ -736,6 +754,8 @@
 							<string>UINavigationItem</string>
 							<string>UISearchBar</string>
 							<string>UITextField</string>
+							<string>UILabel</string>
+							<string>UILabel</string>
 							<string>UIView</string>
 							<string>UIActivityIndicatorView</string>
 							<string>UILabel</string>
